# NLPPipeline

./: README.md
Abrams full/: 84-121123.trans_timestamped.srt  API_KEY_SETUP.md  README.md  pyproject.toml  test_api.py  test_transcript_with_roles.txt  transcript.txt
Abrams full/outputs/: session_20260420_170726.json  session_20260420_174217.json  session_20260420_174255.json  session_20260420_202625.json  session_20260420_202639.json  session_20260421_042033.json  session_20260421_042242.json  session_20260421_042249.json  session_20260421_042250.json  session_20260421_042359.json  session_20260421_042425.json  session_20260421_042426.json  session_20260421_054911.json  session_20260421_060945.json  session_20260421_061116.json  session_20260421_061145.json  session_20260421_061219.json  session_20260421_061519.json  session_20260421_061534.json  session_20260421_062143.json
Abrams full/sasnl/: __init__.py  asr.py  cli.py  config.py  domain_aggregator.py  feature_extractor.py  llm.py  models.py  output_writer.py  pipeline.py  prosody.py  segmenter.py  temporal_summary.py  topic_segmenter.py
Abrams full/sasnl/agents/: __init__.py  base.py  full_battery.py  gates.py  llm_agents.py  phase2_extended.py  registry.py  t1_core.py
Abrams full/sasnl_autism_speaker_study_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Abrams full/tests/: test_pipeline_rigidity.py
